<resources>
    <string name="app_name">TREZOR Manager</string>
    <string name="support_email_subject">TREZOR Manager - problem</string>
    <string name="help_title">Help</string>
    <string name="support_title">Support &amp; feedback</string>
    <string name="about_title">About TREZOR Manager</string>
    <string name="trezor_setup">TREZOR Setup</string>
    <string name="trezor_recovery">TREZOR Recovery</string>
    <string name="do_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="confirm_action_on_trezor">Complete the action on your TREZOR device</string>
    <string name="i_understand">I understand</string>
    <string name="trezor_err_not_connected">TREZOR device is not connected!</string>
    <string name="trezor_err_needs_permission">App needs permission to access TREZOR</string>
    <string name="trezor_err_communication_error">Error while communicating with TREZOR device</string>
    <string name="trezor_err_unexpected_response">Unexpected response from TREZOR</string>
    <string name="main_activity_get_started_title">Get started!</string>
    <string name="main_activity_get_started_text">Connect your TREZOR\ndevice now</string>
    <string name="main_activity_launch_mycelium">Launch Mycelium Wallet</string>
    <string name="main_activity_show_xpubs">Show account public keys (XPUB)</string>
    <string name="main_activity_change_label">Change label</string>
    <string name="main_activity_change_label_prompt">Enter new device label:</string>
    <string name="main_activity_change_homescreen">Change homescreen</string>
    <string name="main_activity_security_setup">Security setup</string>
    <string name="main_activity_pin">PIN protection</string>
    <string name="main_activity_change_pin">Change PIN</string>
    <string name="main_activity_disable_pin">Disable PIN</string>
    <string name="main_activity_disable_pin_prompt">Using PIN protection is highly recommended. PIN prevents unauthorized persons from stealing your bitcoins even when they get physical access to your device.</string>
    <string name="main_activity_passphrase_title">Passphrase encryption</string>
    <string name="main_activity_passphrase_text">Allows you to access new wallets, each hidden behind a particular passphrase. Your old accounts will be accessible behind an empty passphrase</string>
    <string name="main_activity_disable_passphrase_prompt">If you disable the passphrase encryption, your current funds will not appear. You will have to enable the passphrase encryption again to see your current wallet</string>
    <string name="main_activity_disable_passphrase">Disable passphrase</string>
    <string name="main_activity_device_setup">Device setup</string>
    <string name="main_activity_firmware_version">Firmware version: <b>^d^</b></string>
    <string name="main_activity_forget_device_title">Forget device</string>
    <string name="main_activity_forget_device_text">Forgetting only removes the device from this app, your bitcoins are still safe and you can access them by reconnecting your TREZOR again</string>
    <string name="main_activity_forget_device_prompt">Do you want to forget your device?\n\nForgetting only removes the device from the list on the left, your bitcoins are still safe and you can access them by reconnecting your TREZOR again</string>
    <string name="main_activity_wipe_device_title">Wipe device</string>
    <string name="main_activity_wipe_device_text">Wiping the device <b>removes all its information</b>\nUse this feature only if you have your Recovery Seed or you don\'t have any coins on your device</string>
    <string name="main_activity_wipe_device_prompt_text"><b>All data on your device will be deleted</b>\n\nThis action cannot be undone. Never do this action with TREZOR holding coins unless you have your recovery seed at hand</string>
    <string name="main_activity_disconnect_to_apply_setting">Disconnect your TREZOR now to apply changed settings</string>
    <string name="main_activity_disconnect_now">Disconnect your TREZOR</string>
    <string name="main_activity_notif_not_backed_up">Your TREZOR is not backed up\nTap to create backup</string>
    <string name="main_activity_notif_not_named">Your TREZOR has a generic name\nTap to name your TREZOR to increase security</string>
    <string name="main_activity_notif_no_pin">Your TREZOR is not protected by a PIN\nTap to create PIN</string>
    <string name="init_trezor_device_label_hint">Device label</string>
    <string name="init_trezor_device_label_default">My TREZOR</string>
    <string name="init_trezor_create_wallet_title">Create a new wallet</string>
    <string name="init_trezor_create_wallet_desc">New to TREZOR? Don\'t worry!\nWe will walk you through the setup process\nin a few minutes.</string>
    <string name="init_trezor_create_wallet_button">Create new</string>
    <string name="init_trezor_recover_wallet_title">Recover wallet</string>
    <string name="init_trezor_recover_wallet_desc">Have you used a TREZOR before?\nOwn a recovery seed from a different wallet or app?\nSimply restore the wallet from your backup.</string>
    <string name="init_trezor_recover_wallet_button">Recover wallet</string>
    <string name="create_backup_activity_title">1/3 Create backup</string>
    <string name="create_backup_init_title">Backup your TREZOR</string>
    <string name="create_backup_init_desc">First you need to create a backup of your TREZOR to protect your coins from the unexpected</string>
    <string name="create_backup_init_warning_title">Your recovery seed is the backup key to all your cryptocurrencies and applications</string>
    <string name="create_backup_init_warning_desc">Your recovery seed can only be displayed once. Never make a digital copy of your recovery seed and never upload it online. Keep your recovery seed in a safe place. TREZOR cannot be held liable for financial losses incurred through improper care of sensitive information.</string>
    <string name="create_backup_init_things_to_avoid_title">Things to avoid:</string>
    <string name="create_backup_init_things_to_avoid_desc">- Do not take a photo of your recovery seed\n- Do not write it into a computer\n- Do not save it into your cloud storage\n- Never upload it on the Internet</string>
    <string name="create_backup_init_checkbox">I understand and agree</string>
    <string name="create_backup_recovery_seed_title_write">Write down your recovery seed</string>
    <string name="create_backup_recovery_seed_title_check">Check your seed again</string>
    <string name="create_backup_recovery_seed_text_write">On your TREZOR, you will now see a unique combination of 24 words, which will allow you to recover your accounts in case you lose your device. The order of the words is very important.\n\n<b>Please write down all these words carefully.</b></string>
    <string name="create_backup_recovery_seed_text_check">Your TREZOR device will now display your 24 word recovery seed again.\nThese words serve as your backup in case you lose the device.</string>
    <string name="create_backup_recovery_seed_word_num_above_write">Write down the</string>
    <string name="create_backup_recovery_seed_word_num_above_check">Check the</string>
    <string name="create_backup_recovery_seed_num_below_write">word from TREZOR\ninto the recovery seed card</string>
    <string name="create_backup_recovery_seed_word_num_below_check">word from TREZOR\nwith your paper</string>
    <string name="create_backup_recovery_seed_do_not_disconnect">Do not disconnect device</string>
    <string name="create_backup_completed">You have successfully backed up your device!</string>
    <string name="create_backup_recovery_seed_v2_title">Write down your recovery seed</string>
    <string name="create_backup_recovery_seed_v2_desc">Your TREZOR Model T will now display your 12-word recovery seed. Swipe to scroll through the words.\n\nAfter you confirm you finished writing down the words, TREZOR will randomly select two words and ask you to retype them on the screen for verification.</string>
    <string name="name_device_activity_title">2/3 Name your device</string>
    <string name="name_device_init_title">Why should you name your device?</string>
    <string name="name_device_init_desc_title">Security reasons</string>
    <string name="name_device_init_desc_text">By customizing the device name, you can be sure that the TREZOR in your hands is indeed yours. It may also help you in distinguishing between different TREZOR devices.</string>
    <string name="name_device_title">Choose a name for your TREZOR</string>
    <string name="name_device_desc">Personalize your device with your own name or choose one from the examples.\nMaximum label length is 16 characters.</string>
    <string name="name_device_confirm">Confirm to continue</string>
    <string name="name_device_completed">You chose a wonderful name!</string>
    <string name="setup_pin_activity_title">3/3 Set up PIN lock</string>
    <string name="setup_pin_title">Enter a new PIN for ^d^</string>
    <string name="setup_pin_desc">Choose a strong PIN to protect your device from unauthorized access.\nThe layout will be displayed on your TREZOR</string>
    <string name="setup_pin_completed">Good job! Your PIN is set</string>
    <string name="enter_pin_current_prompt">Please enter current PIN</string>
    <string name="enter_pin_new_prompt">Please enter new PIN</string>
    <string name="enter_pin_repeat_prompt">Please repeat new PIN</string>
    <string name="enter_pin_text">Look at the device for number positions</string>
    <string name="enter_pin_text_repeat">Note that the positions of numbers shown on the device have changed!</string>
    <string name="enter_pin_strength_weak">Weak</string>
    <string name="enter_pin_strength_fine">Fine</string>
    <string name="enter_pin_strength_strong">Strong</string>
    <string name="enter_pin_strength_ultimate">Ultimate</string>
    <string name="xpub_activity_title">XPUBs</string>
    <string name="xpub_title">Account public keys - XPUBs</string>
    <string name="xpub_text"><b>Be careful with your XPUBs</b>. When you give them to a third party, you allow it to see your whole transaction history. <a href="https://doc.satoshilabs.com/trezor-user/basic_settings.html#viewing-xpubs">Learn more</a></string>
    <string name="change_homescreen_pick_custom_img">Pick custom image</string>
    <string name="change_homescreen_custom_img_advice">For best results pick a 124x64 black and white image (not grayscale)</string>
    <string name="change_homescreen_custom_img_advice_v2">For best results pick a 144x144 image</string>
    <string name="enter_passphrase_title">Please enter your passphrase</string>
    <string name="enter_passphrase_hint1">Passphrase</string>
    <string name="enter_passphrase_hint2">Re-type for control</string>
    <string name="trezor_recovery_init_seed_length">Number of words in you recovery seed</string>
    <string name="trezor_recovery_init_12_words">12 words</string>
    <string name="trezor_recovery_init_18_words">18 words</string>
    <string name="trezor_recovery_init_24_words">24 words</string>
    <string name="trezor_recovery_init_v2_title">Recover your wallet</string>
    <string name="trezor_recovery_init_v2_text">Your wallet backup, the recovery seed, is entered entirely on the TREZOR Model T, through the device screen. We avoid passing any of your sensitive information to a potentially insecure computer or web browser.
        \n\nFirst of all, TREZOR will ask you how long is your recovery seed. Select the correct number and then you will be asked to enter the words in their correct order, as displayed on the screen. Us the touchscreen to enter the words.
        \n\nClick on \"Continue\" to start the recovery process.</string>
</resources>