<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.circlegate.liban.view.PaddedLinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:maxPaddedWidth="@dimen/max_screen_width_narrow"
        >

        <TextView
            style="@style/TextStyleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trezor_recovery_init_v2_title"
            />

        <TextView
            android:id="@+id/txt_text"
            style="@style/TextStyleBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trezor_recovery_init_seed_length"
            />

        <RadioGroup
            android:id="@+id/radio_group_words"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/form_hor_padding"
            android:layout_marginRight="@dimen/form_hor_padding"
            android:layout_marginTop="@dimen/form_vert_padding_min"
            >

            <RadioButton
                android:id="@+id/rbtn_12"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/line_height_small_normal"
                android:text="@string/trezor_recovery_init_12_words"
                />

            <RadioButton
                android:id="@+id/rbtn_18"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/line_height_small_normal"
                android:text="@string/trezor_recovery_init_18_words"
                />

            <RadioButton
                android:id="@+id/rbtn_24"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/line_height_small_normal"
                android:text="@string/trezor_recovery_init_24_words"
                android:checked="true"
                />

        </RadioGroup>

            />

        <Button
            android:id="@+id/btn_continue"
            style="@style/ButtonAppTheme.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_vert_padding"
            android:layout_marginBottom="@dimen/form_vert_padding"
            android:layout_marginLeft="@dimen/form_hor_padding_btn"
            android:layout_marginRight="@dimen/form_hor_padding_btn"
            android:layout_gravity="center_horizontal"
            android:minWidth="180dp"
            android:text="@string/do_continue"
            />

    </com.circlegate.liban.view.PaddedLinearLayout>

</android.support.v4.widget.NestedScrollView>