<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.circlegate.liban.view.PaddedLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:maxPaddedWidth="@dimen/max_screen_width_narrow"
            >

            <TextView
                style="@style/TextStyleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_backup_init_title"
                />

            <TextView
                style="@style/TextStyleBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_vert_padding_big"
                android:text="@string/create_backup_init_desc"
                />

        </com.circlegate.liban.view.PaddedLinearLayout>

        <View style="@style/Divider" />

        <com.circlegate.liban.view.PaddedLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/red_bg"
            app:maxPaddedWidth="@dimen/max_screen_width_narrow"
            >

            <TextView
                style="@style/TextStyleSubhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_backup_init_warning_title"
                android:textColor="@color/red_highlight"
                />

            <TextView
                style="@style/TextStyleBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_vert_padding_big"
                android:text="@string/create_backup_init_warning_desc"
                android:textColor="@color/red_highlight"
                />

        </com.circlegate.liban.view.PaddedLinearLayout>

        <View style="@style/Divider" />

        <com.circlegate.liban.view.PaddedLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:maxPaddedWidth="@dimen/max_screen_width_narrow"
            >

            <TextView
                style="@style/TextStyleSubhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_backup_init_things_to_avoid_title"
                />

            <TextView
                style="@style/TextStyleBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_backup_init_things_to_avoid_desc"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_vert_padding"
                android:layout_marginBottom="@dimen/form_vert_padding_big"
                android:paddingLeft="@dimen/form_hor_padding"
                android:paddingRight="@dimen/form_hor_padding">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/create_backup_init_checkbox"
                    />

                <Button
                    android:id="@+id/btn_continue"
                    style="@style/ButtonAppTheme.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/form_hor_padding_btn"
                    android:text="@string/do_continue"
                    android:minWidth="120dp"
                    android:enabled="false"
                    />

            </LinearLayout>

        </com.circlegate.liban.view.PaddedLinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>