<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <com.circlegate.liban.view.PaddedLinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:maxPaddedWidth="@dimen/max_screen_width_narrow"
        >

        <TextView
            style="@style/TextStyleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_backup_recovery_seed_v2_title"
            />

        <TextView
            android:id="@+id/txt_text"
            style="@style/TextStyleBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_backup_recovery_seed_v2_desc"
            />

        <TextView
            style="@style/TextStyleSubhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_action_on_trezor"
            android:textColor="@color/primary_normal"
            android:textStyle="bold"
            />


    </com.circlegate.liban.view.PaddedLinearLayout>

</android.support.v4.widget.NestedScrollView>