<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <com.circlegate.liban.view.PaddedLinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:maxPaddedWidth="@dimen/max_screen_width_narrow"
        >

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextStyleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_backup_recovery_seed_title_write"
            />

        <TextView
            android:id="@+id/txt_text"
            style="@style/TextStyleBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_backup_recovery_seed_text_write"
            />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            />

        <TextView
            android:id="@+id/txt_word_num_above"
            style="@style/TextStyleBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_vert_padding"
            android:text="@string/create_backup_recovery_seed_word_num_above_write"
            android:textColor="@color/text_primary"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/txt_word_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_vert_padding_small"
            android:textSize="56dp"
            android:textColor="@color/text_primary"
            android:text="15th"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/txt_word_num_below"
            style="@style/TextStyleBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_vert_padding_small"
            android:paddingBottom="@dimen/form_vert_padding"
            android:text="@string/create_backup_recovery_seed_num_below_write"
            android:textColor="@color/text_primary"
            android:gravity="center_horizontal"
            />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            />

        <TextView
            style="@style/TextStyleBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_vert_padding_small"
            android:paddingBottom="@dimen/form_vert_padding_small"
            android:text="@string/create_backup_recovery_seed_do_not_disconnect"
            android:textColor="@color/red_highlight"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/red_bg"
            />

    </com.circlegate.liban.view.PaddedLinearLayout>

</android.support.v4.widget.NestedScrollView>