<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

        <com.circlegate.liban.view.PaddedLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:maxPaddedWidth="@dimen/max_screen_width_narrow"
            >

            <TextView
                style="@style/TextStyleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_device_title"
                />

            <TextView
                style="@style/TextStyleBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_device_desc"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_device_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_vert_padding"
                android:layout_marginLeft="@dimen/form_hor_padding"
                android:layout_marginRight="@dimen/form_hor_padding"
                android:paddingLeft="-4dp"
                android:paddingRight="-4dp"
                android:clipToPadding="false"
                >

                <EditText
                    android:id="@+id/edit_text_device_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/init_trezor_device_label_hint"
                    android:inputType="textCapWords"
                    android:textColor="@color/text_primary_selector"
                    android:maxLength="@integer/device_label_max_length"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_continue"
                style="@style/ButtonAppTheme.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/form_vert_padding_big"
                android:layout_marginBottom="@dimen/form_vert_padding_big"
                android:text="@string/name_device_confirm"
                android:minWidth="180dp"
                android:enabled="false"
                />

        </com.circlegate.liban.view.PaddedLinearLayout>

</android.support.v4.widget.NestedScrollView>